
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int MAXFAKESOCKS ;
 int close (int) ;

void fake_players_socket(int sd) {

    static int socks[64],
                socksp,
                init = 1;
    int i;

    if(init || (sd < 0)) {
        for(i = 0; i < 64; i++) socks[i] = -1;
        socksp = 0;
        init = 0;
        return;
    }
    if(socksp >= 64) socksp = 0;
    if(socks[socksp] >= 0) close(socks[socksp]);
    socks[socksp] = sd;
    socksp++;
}
